# open-source-rez-packages

./: rpms.sh
alembic/1.5.8/: CMakeLists.txt  package.py
alembic/1.5.8/.backup/: build.py
alembic/1.6.1/: CMakeLists.txt  package.py
boost/1.55.0/: CMakeLists.txt  build.sh  package.py
boost/1.55.0/.backup/: build.sh
ffmpeg/3.3.5/: CMakeLists.txt  package.py
hdf5/1.8.11/: CMakeLists.txt  package.py
hdf5/1.8.9/: CMakeLists.txt  package.py
ilmbase/2.2.0/: CMakeLists.txt  package.py
ilmbase/2.2.0/.backup/: build.sh
openexr/2.2.0/: CMakeLists.txt  package.py
pyilmbase/2.2.0/: CMakeLists.txt  package.py
